--- a/prompt_metrics.ipynb
+++ b/prompt_metrics.ipynb
@@ -1,17 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3728ed37",
+   "metadata": {},
+   "source": [
+    "## With reference_summary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "03aa9bee",
+   "execution_count": 3,
+   "id": "b58b4df6",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\stefa\\anaconda3\\envs\\py10\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['pooler.dense.bias', 'pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
       "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['pooler.dense.bias', 'pooler.dense.weight']\n",
@@ -23,36 +29,34 @@
      "output_type": "stream",
      "text": [
       "📝 Weak Prompt Summary:\n",
-      "Here are a few things about the text:\n",
+      "Okay, based on the text:\n",
       "\n",
-      "*   It describes a **new AI model** developed by TechLabs researchers.\n",
-      "*   The model's main achievement is a **30% reduction in energy consumption** in data centers.\n",
-      "*   It uses **reinforcement learning** to manage server workloads efficiently.\n",
-      "*   This innovation is expected to lead to **significant cost savings** (millions) and a **positive environmental impact**.\n",
+      "It describes a new **AI model** developed by **TechLabs researchers**. This model uses **reinforcement learning** to significantly reduce **energy consumption** (specifically a **30% reduction**) in **data centers** by dynamically managing server workloads. The anticipated benefits are **millions in savings** and a **significant reduction in environmental impact**.\n",
       "\n",
-      "In short, the text is about a promising AI technology that dramatically cuts energy use in data centers, offering major economic and environmental benefits.\n",
-      "\n",
-      "  ROUGE-L: 0.2\n",
+      "  ROUGE-L: 0.26\n",
       "  BLEU: 0.01\n",
       "  BERTScore-F1: 0.87\n",
-      "  Length: 114\n",
+      "  Length: 90\n",
       "\n",
       "📝 Strong Prompt Summary:\n",
-      "Researchers have developed a new AI model that uses reinforcement learning to intelligently manage server workloads, achieving a remarkable 30% reduction in data center energy consumption. This breakthrough innovation promises significant cost savings and a major positive impact on the environment by lowering the energy footprint of these massive facilities.\n",
+      "Here's a summary:\n",
       "\n",
-      "  ROUGE-L: 0.24\n",
-      "  BLEU: 0.05\n",
-      "  BERTScore-F1: 0.91\n",
-      "  Length: 53\n",
+      "A groundbreaking AI developed by TechLabs can cut energy use in data centers by 30% through smarter server management. This promises massive savings for businesses and a significant positive impact on the environment.\n",
       "\n",
-      "🏆 Weighted Score (Weak): 1.722\n",
-      "🏆 Weighted Score (Strong): 1.85\n",
+      "  ROUGE-L: 0.19\n",
+      "  BLEU: 0.03\n",
+      "  BERTScore-F1: 0.9\n",
+      "  Length: 40\n",
+      "\n",
+      "🏆 Weighted Score (Weak): 3.42\n",
+      "🏆 Weighted Score (Strong): 3.916\n",
       "\n",
       "✅ Strong prompt performed better across the majority of metrics.\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "import google.generativeai as genai\n",
@@ -61,6 +65,9 @@
     "from nltk.tokenize import word_tokenize\n",
     "from bert_score import score as bert_score\n",
     "import nltk\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning, module='bert_score')\n",
+    "warnings.filterwarnings(\"ignore\", category=Warning)\n",
     "\n",
     "# Ensure punkt tokenizer is available\n",
     "try:\n",
@@ -157,13 +164,18 @@
     "\n",
     "# Define weighted scoring\n",
     "weights = {\n",
-    "    'ROUGE-L': 0.3,\n",
-    "    'BLEU': 0.1,\n",
-    "    'BERTScore-F1': 0.3,\n",
-    "    'Relevance': 0.1,\n",
-    "    'Correctness': 0.1,\n",
-    "    'Instruction Adherence': 0.1\n",
+    "    # automatic\n",
+    "    \"ROUGE-L\":      0.10,\n",
+    "    \"BLEU\":         0.05,\n",
+    "    \"BERTScore-F1\": 0.05,\n",
+    "    # LLM-as-judge  ← keys must match exactly what evaluate_with_gpt returns\n",
+    "    \"Relevance\":            0.30,\n",
+    "    \"Clarity\":              0.15,\n",
+    "    \"Conciseness\":          0.15,\n",
+    "    \"Correctness\":          0.10,\n",
+    "    \"Instruction Adherence\":0.10,\n",
     "}\n",
+    "\n",
     "\n",
     "def compute_weighted(metrics, human):\n",
     "    combined = {**metrics, **human}\n",
@@ -198,6 +210,245 @@
     "    print(\"✅ Weak prompt performed better across the majority of metrics.\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5525aa5a",
+   "metadata": {},
+   "source": [
+    "## Without reference_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bdf08813",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['pooler.dense.bias', 'pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['pooler.dense.bias', 'pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== WEAK SUMMARY ===\n",
+      "Okay, here's something about the text:\n",
+      "\n",
+      "The text describes a **groundbreaking AI model** developed by **TechLabs researchers**. Its main achievement is significantly reducing **energy consumption in data centers** by **30%** using **reinforcement learning**. This innovation is expected to bring about **large financial savings** and a **major positive environmental impact**.\n",
+      "‒-‒- Automatic metrics\n",
+      "  ROUGE-L     : 0.45\n",
+      "  BLEU        : 0.06\n",
+      "  BERTScore-F1: 0.87\n",
+      "  Length      : 84\n",
+      "‒-‒- Gemini rubric\n",
+      "  Faithfulness: 5\n",
+      "  Coverage    : 5\n",
+      "  Clarity     : 4\n",
+      "  Conciseness : 4\n",
+      "  Fluency     : 4\n",
+      "\n",
+      "=== STRONG SUMMARY ===\n",
+      "Researchers have developed an AI that achieves a 30% reduction in data center energy consumption by intelligently managing server workloads. This breakthrough promises substantial cost savings and a significant positive impact on the environment.\n",
+      "‒-‒- Automatic metrics\n",
+      "  ROUGE-L     : 0.35\n",
+      "  BLEU        : 0.13\n",
+      "  BERTScore-F1: 0.91\n",
+      "  Length      : 36\n",
+      "‒-‒- Gemini rubric\n",
+      "  Faithfulness: 5\n",
+      "  Coverage    : 5\n",
+      "  Clarity     : 5\n",
+      "  Conciseness : 4\n",
+      "  Fluency     : 5\n",
+      "\n",
+      "🏆 Weighted Score (Weak)  : 3.692\n",
+      "🏆 Weighted Score (Strong): 3.937\n",
+      "\n",
+      "✅ The *strong* prompt performed better across the majority of metrics.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ── Imports & setup ────────────────────────────────────────────────────────────\n",
+    "import os, warnings, nltk\n",
+    "from dotenv import load_dotenv\n",
+    "import google.generativeai as genai          # Gemini SDK\n",
+    "from rouge_score import rouge_scorer\n",
+    "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from bert_score import score as bert_score   # For semantic similarity\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning, module=\"bert_score\")\n",
+    "\n",
+    "# Make sure NLTK’s punkt tokenizer is available\n",
+    "try:\n",
+    "    nltk.data.find(\"tokenizers/punkt\")\n",
+    "except LookupError:\n",
+    "    nltk.download(\"punkt\")\n",
+    "\n",
+    "# Load Gemini API key & choose a model\n",
+    "load_dotenv()\n",
+    "genai.configure(api_key=os.getenv(\"GOOGLE_API_KEY\"))\n",
+    "model = genai.GenerativeModel(\"models/gemini-2.5-flash-preview-04-17\")\n",
+    "\n",
+    "# ── Source document & prompts ─────────────────────────────────────────────────\n",
+    "source_text = \"\"\"\n",
+    "A groundbreaking AI model developed by researchers at TechLabs has achieved a 30 % reduction in \n",
+    "energy consumption in data centers. The model uses reinforcement learning to dynamically manage\n",
+    "server workloads, avoiding unnecessary energy usage. This breakthrough could lead to millions of\n",
+    "dollars in savings and a significant reduction in environmental impact.\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt_weak   = \"Say to me something about the text.\"\n",
+    "prompt_strong = (\n",
+    "    \"You are a technical journalist. In 1-2 sentences, summarize the key innovation and its real-\"\n",
+    "    \"world impact for a general audience.\"\n",
+    ")\n",
+    "\n",
+    "# ── Summarisation helper ──────────────────────────────────────────────────────\n",
+    "def get_summary(prompt: str, text: str) -> str:\n",
+    "    \"\"\"Generate a summary of *text* according to *prompt* using Gemini.\"\"\"\n",
+    "    full_prompt = f\"{prompt}\\n\\n{text}\"\n",
+    "    response    = model.generate_content(full_prompt)\n",
+    "    return response.text.strip()\n",
+    "\n",
+    "summary_weak   = get_summary(prompt_weak,   source_text)\n",
+    "summary_strong = get_summary(prompt_strong, source_text)\n",
+    "\n",
+    "# ── Automatic metrics (reference-free) ────────────────────────────────────────\n",
+    "def evaluate_metrics(summary: str, source: str) -> dict:\n",
+    "    \"\"\"\n",
+    "    Compute overlap-style metrics *against the source document* (no gold summary needed).\n",
+    "    ROUGE-L recall, BLEU precision, BERTScore-F1, and length.\n",
+    "    \"\"\"\n",
+    "    scorer     = rouge_scorer.RougeScorer([\"rougeL\"], use_stemmer=True)\n",
+    "    rouge_l    = scorer.score(source, summary)[\"rougeL\"].recall         # coverage of source\n",
+    "    source_tok = [word_tokenize(source, preserve_line=True)]\n",
+    "    summ_tok   = word_tokenize(summary, preserve_line=True)\n",
+    "    bleu       = sentence_bleu(source_tok, summ_tok,\n",
+    "                               smoothing_function=SmoothingFunction().method1)\n",
+    "    _, _, F1   = bert_score([summary], [source], lang=\"en\", verbose=False)\n",
+    "    return {\n",
+    "        \"ROUGE-L\":      round(rouge_l,  2),\n",
+    "        \"BLEU\":         round(bleu,     2),\n",
+    "        \"BERTScore-F1\": round(F1[0].item(), 2),\n",
+    "        \"Length\":       len(summ_tok),\n",
+    "    }\n",
+    "\n",
+    "# ── LLM-as-Judge (no reference) ───────────────────────────────────────────────\n",
+    "def evaluate_with_gpt_no_ref(summary: str, source_doc: str,\n",
+    "                             criteria_description: str | None = None) -> dict:\n",
+    "    \"\"\"\n",
+    "    Ask Gemini to rate a summary **without any gold reference**.\n",
+    "    The LLM sees the SOURCE and the SUMMARY and returns scores 1-5 for each rubric item.\n",
+    "    \"\"\"\n",
+    "    criteria_description = criteria_description or \"\"\"\n",
+    "You are an expert summarisation evaluator. Judge the SUMMARY only against the SOURCE according to\n",
+    "these five criteria, each on a 1-5 scale (1 = poor, 5 = excellent):\n",
+    "1. Faithfulness – No hallucinations; every claim is supported by the source.\n",
+    "2. Coverage     – Captures the main, important points of the source.\n",
+    "3. Clarity      – Easy to read; well structured; no jargon unless explained.\n",
+    "4. Conciseness  – Succinct yet complete.\n",
+    "5. Fluency      – Grammatically correct and natural English.\n",
+    "\n",
+    "Return a valid Python dict exactly like:\n",
+    "{\"Faithfulness\": 4, \"Coverage\": 5, \"Clarity\": 5, \"Conciseness\": 4, \"Fluency\": 5}\n",
+    "\"\"\"\n",
+    "    prompt = f\"{criteria_description.strip()}\\n\\nSOURCE:\\n{source_doc}\\n\\nSUMMARY:\\n{summary}\\n\\nEVALUATION:\"\n",
+    "    response = model.generate_content(prompt)\n",
+    "\n",
+    "    # Parse the dict safely\n",
+    "    try:\n",
+    "        raw = response.text.strip()\n",
+    "        if raw.startswith(\"```\"):\n",
+    "            raw = raw.strip(\"`\").split(\"python\")[-1].strip()\n",
+    "        result = eval(raw)                                        # <-- trusted parsing for demo\n",
+    "        expected = {\"Faithfulness\", \"Coverage\", \"Clarity\", \"Conciseness\", \"Fluency\"}\n",
+    "        assert expected.issubset(result)\n",
+    "        return result\n",
+    "    except Exception as err:\n",
+    "        print(\"⚠️  Gemini evaluation parsing failed:\", err)\n",
+    "        print(\"Raw response:\\n\", response.text)\n",
+    "        # Fall back to neutral (3) for each criterion\n",
+    "        return {k: 3 for k in [\"Faithfulness\", \"Coverage\", \"Clarity\", \"Conciseness\", \"Fluency\"]}\n",
+    "\n",
+    "# ── Gather scores ────────────────────────────────────────────────────────────\n",
+    "metrics_weak   = evaluate_metrics(summary_weak,   source_text)\n",
+    "metrics_strong = evaluate_metrics(summary_strong, source_text)\n",
+    "\n",
+    "human_weak     = evaluate_with_gpt_no_ref(summary_weak,   source_text)\n",
+    "human_strong   = evaluate_with_gpt_no_ref(summary_strong, source_text)\n",
+    "\n",
+    "# Combine all scores\n",
+    "def weighted_score(auto: dict, human: dict, weights: dict) -> float:\n",
+    "    total = 0\n",
+    "    for k, w in weights.items():\n",
+    "        total += w * (auto.get(k) or human.get(k))\n",
+    "    return round(total, 3)\n",
+    "\n",
+    "weights = {\n",
+    "    # automatic\n",
+    "    \"ROUGE-L\":      0.10,\n",
+    "    \"BLEU\":         0.05,\n",
+    "    \"BERTScore-F1\": 0.05,\n",
+    "    # LLM-as-judge\n",
+    "    \"Faithfulness\": 0.30,\n",
+    "    \"Coverage\":     0.10,\n",
+    "    \"Clarity\":      0.15,\n",
+    "    \"Conciseness\":  0.15,\n",
+    "    \"Fluency\":      0.10,\n",
+    "}\n",
+    "\n",
+    "score_weak   = weighted_score(metrics_weak,   human_weak,   weights)\n",
+    "score_strong = weighted_score(metrics_strong, human_strong, weights)\n",
+    "\n",
+    "# ── Pretty print results ──────────────────────────────────────────────────────\n",
+    "def report(name, summary, auto, human):\n",
+    "    print(f\"\\n=== {name} SUMMARY ===\")\n",
+    "    print(summary)\n",
+    "    print(\"‒-‒- Automatic metrics\")\n",
+    "    for m, v in auto.items():   print(f\"  {m:12}: {v}\")\n",
+    "    print(\"‒-‒- Gemini rubric\")\n",
+    "    for m, v in human.items():  print(f\"  {m:12}: {v}\")\n",
+    "\n",
+    "report(\"WEAK\",   summary_weak,   metrics_weak,   human_weak)\n",
+    "report(\"STRONG\", summary_strong, metrics_strong, human_strong)\n",
+    "\n",
+    "print(f\"\\n🏆 Weighted Score (Weak)  : {score_weak}\")\n",
+    "print(f\"🏆 Weighted Score (Strong): {score_strong}\\n\")\n",
+    "\n",
+    "if score_strong > score_weak:\n",
+    "    print(\"✅ The *strong* prompt performed better across the majority of metrics.\")\n",
+    "elif score_strong < score_weak:\n",
+    "    print(\"✅ The *weak* prompt performed better across the majority of metrics.\")\n",
+    "else:\n",
+    "    print(\"🤝 The two prompts are tied under the current weighting scheme.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23c8ca01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a60c029",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
