--- a/prompt_metrics.ipynb
+++ b/prompt_metrics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "b58b4df6",
    "metadata": {},
    "outputs": [
@@ -28,28 +28,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📝 Weak Prompt Summary:\n",
-      "Okay, based on the text:\n",
       "\n",
-      "It describes a new **AI model** developed by **TechLabs researchers**. This model uses **reinforcement learning** to significantly reduce **energy consumption** (specifically a **30% reduction**) in **data centers** by dynamically managing server workloads. The anticipated benefits are **millions in savings** and a **significant reduction in environmental impact**.\n",
+      "=== WEAK SUMMARY ===\n",
+      "Okay, based on the text, here's something about it:\n",
       "\n",
-      "  ROUGE-L: 0.26\n",
-      "  BLEU: 0.01\n",
-      "  BERTScore-F1: 0.87\n",
-      "  Length: 90\n",
+      "The text describes a **new AI model developed by TechLabs** that has achieved a **significant 30% reduction in energy consumption** specifically in **data centers**. It achieves this impressive result by using **reinforcement learning** to smartly manage server workloads. The text highlights that this breakthrough could lead to **substantial financial savings** (millions) and a **positive impact on the environment**.\n",
+      "‒-‒- Metric values (w = weight)\n",
+      "  ROUGE-L            w=0.10  →  0.26\n",
+      "  BLEU               w=0.05  →  0.02\n",
+      "  BERTScore-F1       w=0.05  →  0.88\n",
+      "  Relevance          w=0.30  →  5\n",
+      "  Clarity            w=0.15  →  4\n",
+      "  Conciseness        w=0.15  →  3\n",
+      "  Correctness        w=0.10  →  5\n",
+      "  Instruction Adherence w=0.10  →  3\n",
       "\n",
-      "📝 Strong Prompt Summary:\n",
-      "Here's a summary:\n",
+      "=== STRONG SUMMARY ===\n",
+      "Researchers have developed an AI model that dramatically reduces the energy needed to run data centers by intelligently managing server workloads, achieving a 30% cut. This breakthrough promises significant cost savings for businesses and a major positive impact on the environment.\n",
+      "‒-‒- Metric values (w = weight)\n",
+      "  ROUGE-L            w=0.10  →  0.24\n",
+      "  BLEU               w=0.05  →  0.02\n",
+      "  BERTScore-F1       w=0.05  →  0.9\n",
+      "  Relevance          w=0.30  →  5\n",
+      "  Clarity            w=0.15  →  5\n",
+      "  Conciseness        w=0.15  →  4\n",
+      "  Correctness        w=0.10  →  5\n",
+      "  Instruction Adherence w=0.10  →  5\n",
       "\n",
-      "A groundbreaking AI developed by TechLabs can cut energy use in data centers by 30% through smarter server management. This promises massive savings for businesses and a significant positive impact on the environment.\n",
-      "\n",
-      "  ROUGE-L: 0.19\n",
-      "  BLEU: 0.03\n",
-      "  BERTScore-F1: 0.9\n",
-      "  Length: 40\n",
-      "\n",
-      "🏆 Weighted Score (Weak): 3.42\n",
-      "🏆 Weighted Score (Strong): 3.916\n",
+      "‒-‒- Weighted Scores\n",
+      "🏆 Weighted Score (Weak): 3.421\n",
+      "🏆 Weighted Score (Strong): 3.92\n",
       "\n",
       "✅ Strong prompt performed better across the majority of metrics.\n"
      ]
@@ -186,21 +194,23 @@
     "\n",
     "\n",
     "\n",
-    "# Print output as requested\n",
-    "print(\"📝 Weak Prompt Summary:\")\n",
-    "print(summary_weak)\n",
-    "print(f\"\\n  ROUGE-L: {metrics_weak['ROUGE-L']}\")\n",
-    "print(f\"  BLEU: {metrics_weak['BLEU']}\")\n",
-    "print(f\"  BERTScore-F1: {metrics_weak['BERTScore-F1']}\")\n",
-    "print(f\"  Length: {metrics_weak['Length']}\\n\")\n",
+    "def report(name, summary, auto, human):\n",
+    "    print(f\"\\n=== {name} SUMMARY ===\")\n",
+    "    print(summary)\n",
     "\n",
-    "print(\"📝 Strong Prompt Summary:\")\n",
-    "print(summary_strong)\n",
-    "print(f\"\\n  ROUGE-L: {metrics_strong['ROUGE-L']}\")\n",
-    "print(f\"  BLEU: {metrics_strong['BLEU']}\")\n",
-    "print(f\"  BERTScore-F1: {metrics_strong['BERTScore-F1']}\")\n",
-    "print(f\"  Length: {metrics_strong['Length']}\\n\")\n",
+    "    # merge the two dicts once so look-ups are easy\n",
+    "    combined = {**auto, **human}\n",
     "\n",
+    "    print(\"‒-‒- Metric values (w = weight)\")\n",
+    "    for k, w in weights.items():                # <-- iterate over *all* weights\n",
+    "        val = combined.get(k, \"—\")              # if a key is missing, show a dash\n",
+    "        print(f\"  {k:18} w={w:4.2f}  →  {val}\")\n",
+    "\n",
+    "# call the helper\n",
+    "report(\"WEAK\",   summary_weak,   metrics_weak,   human_weak)\n",
+    "report(\"STRONG\", summary_strong, metrics_strong, human_strong)\n",
+    "\n",
+    "print(\"\\n‒-‒- Weighted Scores\")\n",
     "print(f\"🏆 Weighted Score (Weak): {score_weak}\")\n",
     "print(f\"🏆 Weighted Score (Strong): {score_strong}\\n\")\n",
     "\n",
@@ -221,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "bdf08813",
    "metadata": {},
    "outputs": [
@@ -241,39 +251,43 @@
      "text": [
       "\n",
       "=== WEAK SUMMARY ===\n",
-      "Okay, here's something about the text:\n",
+      "The text describes a **groundbreaking AI model** developed by researchers at TechLabs.\n",
       "\n",
-      "The text describes a **groundbreaking AI model** developed by **TechLabs researchers**. Its main achievement is significantly reducing **energy consumption in data centers** by **30%** using **reinforcement learning**. This innovation is expected to bring about **large financial savings** and a **major positive environmental impact**.\n",
-      "‒-‒- Automatic metrics\n",
-      "  ROUGE-L     : 0.45\n",
-      "  BLEU        : 0.06\n",
-      "  BERTScore-F1: 0.87\n",
-      "  Length      : 84\n",
-      "‒-‒- Gemini rubric\n",
-      "  Faithfulness: 5\n",
-      "  Coverage    : 5\n",
-      "  Clarity     : 4\n",
-      "  Conciseness : 4\n",
-      "  Fluency     : 4\n",
+      "Its key achievement is a **30% reduction in energy consumption** specifically in **data centers**.\n",
+      "\n",
+      "The model uses **reinforcement learning** to efficiently manage server workloads, which avoids wasting energy.\n",
+      "\n",
+      "This breakthrough is expected to lead to significant **cost savings** and a **positive environmental impact**.\n",
+      "‒-‒- Metric values (w = weight)\n",
+      "  ROUGE-L            w=0.10  →  0.76\n",
+      "  BLEU               w=0.05  →  0.17\n",
+      "  BERTScore-F1       w=0.05  →  0.9\n",
+      "  Faithfulness       w=0.30  →  4\n",
+      "  Coverage           w=0.10  →  5\n",
+      "  Clarity            w=0.15  →  5\n",
+      "  Conciseness        w=0.15  →  4\n",
+      "  Fluency            w=0.10  →  5\n",
       "\n",
       "=== STRONG SUMMARY ===\n",
-      "Researchers have developed an AI that achieves a 30% reduction in data center energy consumption by intelligently managing server workloads. This breakthrough promises substantial cost savings and a significant positive impact on the environment.\n",
-      "‒-‒- Automatic metrics\n",
-      "  ROUGE-L     : 0.35\n",
-      "  BLEU        : 0.13\n",
-      "  BERTScore-F1: 0.91\n",
-      "  Length      : 36\n",
-      "‒-‒- Gemini rubric\n",
-      "  Faithfulness: 5\n",
-      "  Coverage    : 5\n",
-      "  Clarity     : 5\n",
-      "  Conciseness : 4\n",
-      "  Fluency     : 5\n",
+      "Here are a couple of options:\n",
       "\n",
-      "🏆 Weighted Score (Weak)  : 3.692\n",
-      "🏆 Weighted Score (Strong): 3.937\n",
+      "1.  Researchers have developed an AI that cuts data center energy use by 30% through smarter server management, promising millions in savings and a significant environmental boost.\n",
+      "2.  A new AI model dramatically reduces the massive energy consumption of data centers by 30%, leading to huge potential cost savings and a smaller environmental footprint for the tech industry.\n",
+      "‒-‒- Metric values (w = weight)\n",
+      "  ROUGE-L            w=0.10  →  0.29\n",
+      "  BLEU               w=0.05  →  0.08\n",
+      "  BERTScore-F1       w=0.05  →  0.89\n",
+      "  Faithfulness       w=0.30  →  4\n",
+      "  Coverage           w=0.10  →  5\n",
+      "  Clarity            w=0.15  →  5\n",
+      "  Conciseness        w=0.15  →  4\n",
+      "  Fluency            w=0.10  →  5\n",
       "\n",
-      "✅ The *strong* prompt performed better across the majority of metrics.\n"
+      "‒-‒- Weighted Scores\n",
+      "🏆 Weighted Score (Weak)  : 3.679\n",
+      "🏆 Weighted Score (Strong): 3.627\n",
+      "\n",
+      "✅ The *weak* prompt performed better across the majority of metrics.\n"
      ]
     }
    ],
@@ -411,19 +425,25 @@
     "score_weak   = weighted_score(metrics_weak,   human_weak,   weights)\n",
     "score_strong = weighted_score(metrics_strong, human_strong, weights)\n",
     "\n",
-    "# ── Pretty print results ──────────────────────────────────────────────────────\n",
+    "# ── Pretty print results ──────────────────────────────────────────────\n",
     "def report(name, summary, auto, human):\n",
     "    print(f\"\\n=== {name} SUMMARY ===\")\n",
     "    print(summary)\n",
-    "    print(\"‒-‒- Automatic metrics\")\n",
-    "    for m, v in auto.items():   print(f\"  {m:12}: {v}\")\n",
-    "    print(\"‒-‒- Gemini rubric\")\n",
-    "    for m, v in human.items():  print(f\"  {m:12}: {v}\")\n",
     "\n",
+    "    # merge the two dicts once so look-ups are easy\n",
+    "    combined = {**auto, **human}\n",
+    "\n",
+    "    print(\"‒-‒- Metric values (w = weight)\")\n",
+    "    for k, w in weights.items():                # <-- iterate over *all* weights\n",
+    "        val = combined.get(k, \"—\")              # if a key is missing, show a dash\n",
+    "        print(f\"  {k:18} w={w:4.2f}  →  {val}\")\n",
+    "\n",
+    "# call the helper\n",
     "report(\"WEAK\",   summary_weak,   metrics_weak,   human_weak)\n",
     "report(\"STRONG\", summary_strong, metrics_strong, human_strong)\n",
     "\n",
-    "print(f\"\\n🏆 Weighted Score (Weak)  : {score_weak}\")\n",
+    "print(\"\\n‒-‒- Weighted Scores\")\n",
+    "print(f\"🏆 Weighted Score (Weak)  : {score_weak}\")\n",
     "print(f\"🏆 Weighted Score (Strong): {score_strong}\\n\")\n",
     "\n",
     "if score_strong > score_weak:\n",
